-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Distributed Query Execution
-
Query Execution
-
Fully Compatible
-
ALL
-
v8.3
-
QE 2026-04-27
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Problem
The getAsync retry callback in AsyncResultsMerger::_handleBatchResponse unconditionally calls _cleanUpKilledBatch whenever _lifecycleState != kAlive !_status.isOK() (while lifecycle is still kAlive), or when lifecycle is kKillComplete, the tassert fires.
// src/mongo/s/query/exec/async_results_merger.cpp, inside the getAsync retry callback >if (self->_lifecycleState != kAlive || !self->_status.isOK()) { remote->outstandingRequest = false; self->_signalCurrentEventIfReady(lk); self->_cleanUpKilledBatch(lk); // tasserts: _lifecycleState != kKillStarted return; }
Fix
Guard _cleanUpKilledBatch so it only runs when _lifecycleState == kKillStarted
- blocks
-
SERVER-114130 Move the failRateLimiting fail point to the ingress request rate limiter in session workflow
-
- Closed
-