SERVER-123611 Guard calls to AsyncResultsMerger::_cleanUpKilledBatch (#52221)

GitOrigin-RevId: 17569c18ffebfe6c5abc901a349af0961a379fb1